
  All platforms
  -------------
  Symbol removed: _ZNSt3__118__time_get_storageIcE4initERKNS_5ctypeIcEE
  Symbol removed: _ZNSt3__118__time_get_storageIcE9__analyzeEcRKNS_5ctypeIcEE
  Symbol removed: _ZNSt3__118__time_get_storageIwE4initERKNS_5ctypeIwEE
  Symbol removed: _ZNSt3__118__time_get_storageIwE9__analyzeEcRKNS_5ctypeIwEE
  Symbol added: _ZNSt3__123__atomic_monitor_globalEPVKv
  Symbol added: _ZNSt3__126__atomic_wait_global_tableEPVKvi
  Symbol added: _ZNSt3__126__atomic_notify_one_nativeILm4EEEvPVKv
  Symbol added: _ZNSt3__132__atomic_notify_all_global_tableEPVKv
  Symbol added: _ZNSt3__120__atomic_wait_nativeILm4EEEvPVKvPKv
  Symbol added: _ZNSt3__126__atomic_notify_all_nativeILm4EEEvPVKv
  Symbol added: _ZNSt3__132__atomic_notify_one_global_tableEPVKv

------------
Version 21.0
------------

* [libc++] Optimize ctype::to{lower,upper}

  This patch removed __classic_upper_table() and __classic_lower_table(), which were only ever accessed from the dylib.

  x86_64-unknown-gnu-linux
  ------------------------
  Symbol removed: _ZNSt3__15ctypeIcE21__classic_lower_tableEv
  Symbol removed: _ZNSt3__15ctypeIcE21__classic_upper_tableEv

* [libc++] Instantiate hash function externally

  This has multiple benefits:
  - There is a single instance of our hash function, reducing object file size
  - The hash implementation isn't instantiated in every TU anymore, reducing compile times
  - Behind an ABI configuration macro, it would be possible to salt the hash

  All platforms
  -------------
  Symbol added: _ZNSt3__113__hash_memoryEPKvm

------------
Version 20.0
------------

* [libc++][PMR] Remove duplicate implementation of __try_allocate_from_chunk

  This patch removes member functions __try_allocate_from_chunk from __chunk_footer and __initial_descriptor.
  The two implementations were almost identical and can be easily moved to be implementation details of the built library.